# substrate-node-template

native/: Cargo.toml
native/src/: lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
